Sign up flow refactored

--- a/todo.txt
+++ b/todo.txt
@@ -5,3 +5,6 @@
 
 
 - Curator signing in indicator
+- Profile continuation on incomplete account creation
+
+- Submit signup code returns a token that can be used to then proceed to profile setup
